compile_tests/multiple_non_signed.stderr
error: Required error message is missing
 --> compile_tests/multiple_non_signed.rs:3:5
  |
3 |     First,
  |     ^^^^^
